[Add] data downloaded & change venv

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # Virtual Envirionment for CPU
 .venv
 
-# Study Folder for LSTM
-.study_LSTM
-
 # pycache
 **/__pycache__/**
 
 # vscode
 .vscode
+
+# data
+data/
+!data/temp.txt
