[Modify] requirement.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ torchsummary==1.5.1
 numpy==1.26.4
 pandas==2.2.2
 wfdb==4.1.2 # PTB-XL, not ECG5000
-ipykernel==6.29.5 # Optional (Metadata search)
-jupyterlab==4.2.4 # Optional (Metadata search)
+ipykernel==6.29.5 # PTB-XL, not ECG5000 | Optional (Metadata search)
+jupyterlab==4.2.4 # PTB-XL, not ECG5000 | Optional (Metadata search)
